option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages')
option('xwayland', type: 'feature', value: 'auto', description: 'Enable support for X11 applications')
option('input_calibration', type: 'feature', value: 'disabled', description: 'Enable input calibration interface')
